# 05_Power_Grid_Repair_Time

./: .gitignore  00_data_merge.ipynb  01a_data_preprocessing.ipynb  01b_data_preprocessing.ipynb  02_data_analysis.ipynb  02_grid_data_preprocessing.ipynb  03_grid_data_analysis.ipynb  04_trans_data_preprocessing.ipynb  05_trans_data_analysis.ipynb  main.py  pyproject.toml
BPA_DATA/: OutagesCY2012.xls  OutagesCY2012.xlsx  OutagesCY2013.xls  OutagesCY2013.xlsx  OutagesCY2014.xlsx  OutagesCY2015.xlsx  OutagesCY2016.xlsx  OutagesCY2017.xlsx  OutagesCY2018.xlsx  OutagesCY2019.xlsx  OutagesCY2020.xlsx  OutagesCY2021.xlsx  OutagesCY2022.xlsx  OutagesCY2023.xlsx  OutagesCY2025.xlsx  OutagesCY2026.xlsx
DOE_OE_417_Annual_Data/: 2012_Annual_Summary.xlsx  2013_Annual_Summary.xlsx  2014_Annual_Summary.xls  2014_Annual_Summary.xlsx  2015_Annual_Summary.xlsx  2016_Annual_Summary.xlsx  2017_Annual_Summary.xlsx  2018_Annual_Summary.xlsx  2019_Annual_Summary.xlsx  2020_Annual_Summary.xlsx  2021_Annual_Summary.xlsx  2022_Annual_Summary.xlsx  2023_Annual_Summary.xls  2023_Annual_Summary.xlsx
More_BPA_DATA/: OutagesCY2010.xls  OutagesCY2011.xls
More_BPA_Data/: OutagesCY2024.xlsx
data/: df_clean.csv  doe_wecc.csv  transformer_clean.csv
raw_data/: bpa_transformer_data_merged.csv  doe_data_merged.csv
